// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Error groups detailed statistics when data is loaded returns the correct data 1`] = `
Object {
  "groupId": "051f95eabf120ebe2f8b0399fe3e54c5",
  "timeseries": Array [
    Object {
      "x": 1607435820000,
      "y": 0,
    },
    Object {
      "x": 1607435880000,
      "y": 0,
    },
    Object {
      "x": 1607435940000,
      "y": 0,
    },
    Object {
      "x": 1607436000000,
      "y": 0,
    },
    Object {
      "x": 1607436060000,
      "y": 0,
    },
    Object {
      "x": 1607436120000,
      "y": 0,
    },
    Object {
      "x": 1607436180000,
      "y": 0,
    },
    Object {
      "x": 1607436240000,
      "y": 0,
    },
    Object {
      "x": 1607436300000,
      "y": 1,
    },
    Object {
      "x": 1607436360000,
      "y": 0,
    },
    Object {
      "x": 1607436420000,
      "y": 0,
    },
    Object {
      "x": 1607436480000,
      "y": 0,
    },
    Object {
      "x": 1607436540000,
      "y": 0,
    },
    Object {
      "x": 1607436600000,
      "y": 1,
    },
    Object {
      "x": 1607436660000,
      "y": 0,
    },
    Object {
      "x": 1607436720000,
      "y": 0,
    },
    Object {
      "x": 1607436780000,
      "y": 0,
    },
    Object {
      "x": 1607436840000,
      "y": 0,
    },
    Object {
      "x": 1607436900000,
      "y": 0,
    },
    Object {
      "x": 1607436960000,
      "y": 0,
    },
    Object {
      "x": 1607437020000,
      "y": 0,
    },
    Object {
      "x": 1607437080000,
      "y": 0,
    },
    Object {
      "x": 1607437140000,
      "y": 0,
    },
    Object {
      "x": 1607437200000,
      "y": 2,
    },
    Object {
      "x": 1607437260000,
      "y": 0,
    },
    Object {
      "x": 1607437320000,
      "y": 1,
    },
    Object {
      "x": 1607437380000,
      "y": 0,
    },
    Object {
      "x": 1607437440000,
      "y": 0,
    },
    Object {
      "x": 1607437500000,
      "y": 0,
    },
    Object {
      "x": 1607437560000,
      "y": 0,
    },
    Object {
      "x": 1607437620000,
      "y": 0,
    },
  ],
}
`;

exports[`APM API tests basic apm_8.0.0 Error groups detailed statistics when data is loaded with previous data returns the correct data returns correct timeseries 1`] = `
Object {
  "groupId": "051f95eabf120ebe2f8b0399fe3e54c5",
  "timeseries": Array [
    Object {
      "x": 1607436720000,
      "y": 0,
    },
    Object {
      "x": 1607436780000,
      "y": 0,
    },
    Object {
      "x": 1607436840000,
      "y": 0,
    },
    Object {
      "x": 1607436900000,
      "y": 0,
    },
    Object {
      "x": 1607436960000,
      "y": 0,
    },
    Object {
      "x": 1607437020000,
      "y": 0,
    },
    Object {
      "x": 1607437080000,
      "y": 0,
    },
    Object {
      "x": 1607437140000,
      "y": 0,
    },
    Object {
      "x": 1607437200000,
      "y": 2,
    },
    Object {
      "x": 1607437260000,
      "y": 0,
    },
    Object {
      "x": 1607437320000,
      "y": 1,
    },
    Object {
      "x": 1607437380000,
      "y": 0,
    },
    Object {
      "x": 1607437440000,
      "y": 0,
    },
    Object {
      "x": 1607437500000,
      "y": 0,
    },
    Object {
      "x": 1607437560000,
      "y": 0,
    },
    Object {
      "x": 1607437620000,
      "y": 0,
    },
  ],
}
`;
